--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "date-fns": "^2.28.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
