--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "date-fns": "^2.28.0",
