--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "sanitize-html": "^2.7.0"
   }
 }
