--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "build:css": "postcss public/stylesheets/tailwind.css -o public/stylesheets/style.css",
     "debug": "DEBUG=express:* nodemon ./bin/www",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "async": "^3.2.4",
+    "autoprefixer": "^10.4.7",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.4",
+    "daisyui": "^2.19.0",
     "date-fns": "^2.28.0",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
@@ -23,7 +26,10 @@
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
     "pug": "2.0.0-beta11",
-    "sanitize-html": "^2.7.0"
+    "sanitize-html": "^2.7.0",
+    "tailwindcss": "^3.1.5"
   }
 }
