--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^3.2.4",
     "autoprefixer": "^10.4.7",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "daisyui": "^2.19.0",
@@ -21,6 +22,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "helmet": "^5.1.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.4.3",
     "morgan": "~1.9.1",
